Fixes hamburger banana on iOS

--- a/src/components/hamburger/hamburger.module.scss
+++ b/src/components/hamburger/hamburger.module.scss
@@ -1,37 +1,37 @@
-@import '../../styles/global/mixins.scss';
+@import "../../styles/global/mixins.scss";
 
 $borderSize: 1px;
 
 .hamburger {
-    min-height: 4rem;
-    height: 4rem;
-    max-height: 4rem;
-    min-width: 4rem;
-    width: 4rem;
-    max-width: 4rem;
-    background: var(--primary);
+  height: 4rem;
+  width: 4rem;
+  position: relative;
+  background: var(--primary);
+  border: $borderSize solid var(--highlight);
 
-    // removes dotted line on firefox button focus - only acceptable due to background pop on focus
-    &::-moz-focus-inner {
-        border: 0;
-    }
+  // removes dotted line on firefox button focus - only acceptable due to background pop on focus
+  &::-moz-focus-inner {
+    border: 0;
+  }
 
-    &:hover,
-    &:focus,
-    &:active {
-        cursor: pointer;
-    }
+  &:hover,
+  &:focus,
+  &:active {
+    cursor: pointer;
+  }
 }
 
 .hamburger[data-open="true"] {
-    background: var(--main-bg);
+  background: var(--main-bg);
 }
 
 .icon {
-    fill: var(--highlight);
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    border: none;
+  fill: var(--highlight);
+  width: 100%;
+  height: 100%;
+  border: none;
+  position: absolute;
+  padding: 0.5rem;
+  top: 0;
+  left: 0;
 }
